--- a/index.html
+++ b/index.html
@@ -1,5 +1,68 @@
-Merhaba!
-Uygulamamız Yakında Kodlanmaya Başlancaktır 🙂
-Arayüz Discord Benzeri Bir Arayüz Yapılmaya Çalışılcaktır.
-Anlayışınız İçin Teşekkür Ederiz.
-Duyurular İçin Discord Sunucumuza Katılmayı Unutmayın.
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZenithChat - Duyuru</title>
+    <style>
+        /* Genel Stil */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+        body {
+            background-color: #36393f;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            background: #2f3136;
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            font-size: 24px;
+            color: #7289da;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 15px;
+            background: #7289da;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .btn:hover {
+            background: #5b6eae;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <h1>ZenithChat</h1>
+        <p>Merhaba! Uygulamamız yakında kodlanmaya başlanacaktır 🙂</p>
+        <p>Arayüz, Discord benzeri bir arayüz yapmaya çalışılacaktır.</p>
+        <p>Anlayışınız için teşekkür ederiz.</p>
+        <p>Duyurular için Discord sunucumuza katılmayı unutmayın.</p>
+        <a href="https://discord.gg/jVpQQ73pEk" class="btn" target="_blank">Sunucuya Katıl</a>
+    </div>
+
+</body>
+  </html>
